@@ -23,6 +23,7 @@
 class Account < ActiveRecord::Base
   belongs_to :user
   has_many :permissions, :as => :asset, :include => :user
+  uses_mysql_uuid
   acts_as_paranoid
 
   validates_presence_of :name, :message => "^Please specify account name."
