@@ -28,6 +28,7 @@ class Campaign < ActiveRecord::Base
   belongs_to :user
   has_many   :leads
   has_many :permissions, :as => :asset, :include => :user
+  uses_mysql_uuid
   acts_as_paranoid
 
   validates_presence_of :name, :message => "^Please specify campaign name."
