@@ -4,6 +4,10 @@
   <%= f.error_messages %>
 
   <p>
+    Name:<br>
+    <%= f.text_field :name %>
+  </p>
+  <p>
     <%= f.submit "Update" %>
   </p>
 <% end %>
