@@ -1,0 +1,2 @@
+require "mysql_uuid"
+ActiveRecord::Base.send :include, MySQL_UUID
